fix: Adiciona prisma generate ao processo de build para Vercel - Adiciona postinstall script para gerar Prisma Client apÃ³s npm install - Adiciona prisma generate ao script de build - Resolve erro PrismaClientInitializationError no Vercel

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "dev:api": "ts-node --project tsconfig.server.json src/api/server.ts",
     "start:api": "tsx src/api/server.ts",
-    "build": "next build",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
