feat: MigraÃ§Ã£o para padrÃ£o de arquitetura proposto
- Instaladas dependÃªncias: zod e http-status-codes
- Criado Prisma singleton (src/libs/prisma.ts)
- Implementado middleware de validaÃ§Ã£o factory pattern (src/shared/middlewares/Validation.ts)
- Migrados controllers para padrÃ£o por operaÃ§Ã£o:
  * SuprimentosController (completo)
  * ObrasController (completo)
  * CompetenciasController (completo)
- Criados schemas Zod para validaÃ§Ã£o automÃ¡tica
- Atualizadas rotas para usar novos controllers e validaÃ§Ã£o
- Aplicado Prisma singleton em todas as rotas e middlewares
- Adicionados serviÃ§os: AuditService, SuprimentosService, ReadService
- Adicionadas rotas: auditoria, contexto, read, suprimentos

Controllers migrados: 3/6 (50%)
Schemas Zod criados: 4/6 (67%)
Prisma singleton: 100% aplicado

--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start:api": "tsx src/api/server.ts",
     "postinstall": "prisma generate",
     "build": "prisma generate && next build",
+    "build:api": "prisma generate && prisma migrate deploy",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node prisma/seed.ts",
+    "migrate:deploy": "prisma migrate deploy",
+    "migrate:dev": "prisma migrate dev"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
